@@ -52,6 +52,8 @@ CHANGES IN FLTK 1.3.0
         - Added support for shortcuts for Fl_Input_, Fl_Value_Input, and 
 	  Fl_Text_Display derived widgets (STR #1770)
         - Added Fl_Menu_ methods: insert(), find_index(), clear_submenu()
+	- Hotspot behavior of fl_message() and other common dialogs is now
+	  optional (STR #2561).
 
 	  IDE support and command line build options
 
